k8s/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2019-11-10T21:21:53Z"
  generation: 2
  labels:
    app: myapp1
  name: myapp1
  namespace: default
  resourceVersion: "8746"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/myapp1
  uid: 1d8b023d-0400-11ea-ae23-42010aa600d9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: myapp1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp1
    spec:
      containers:
        - image: manojkumark/devops_ui:VERSION
          imagePullPolicy: IfNotPresent
          name: azure-poc-ui
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: "2019-11-10T21:21:55Z"
      lastUpdateTime: "2019-11-10T21:21:55Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2019-11-10T21:21:53Z"
      lastUpdateTime: "2019-11-10T21:21:55Z"
      message: ReplicaSet "myapp1-64779bfc8" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
