k8s/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "appui-service"
  namespace: "default"
  labels:
    app: "appui"
spec:
  ports:
    - protocol: "TCP"
      port: 7000
      targetPort: 80
  selector:
    app: "appui"
  type: "LoadBalancer"
  loadBalancerIP: ""
